--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.projectKey=web-app
 sonar.projectName= web app
 sonar.projectVersion=1.0
 sonar.sources=.
+sonar.exclusions=**/deploy.sh,**/Dockerfile,**/Jenkinsfile,**/readme.md,**/sonar-project.properties
 sonar.language=html
 sonar.sourceEncoding=utf-8
-sonar.tests=.
+
