--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=web-app
-sonar.projectName= web app
+sonar.projectKey=devops-project-jenkins
+sonar.projectName= devops project
 sonar.projectVersion=1.0
 sonar.sources=.
 sonar.exclusions=**/deploy.sh,**/Dockerfile,**/Jenkinsfile,**/readme.md,**/sonar-project.properties
